--- a/package.json
+++ b/package.json
@@ -21,14 +21,18 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "mysql2": "^3.6.0",
+    "@supabase/supabase-js": "^2.89.0",
     "bcrypt": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.8.1",
     "helmet": "^7.0.0",
-    "express-rate-limit": "^6.8.1"
+    "jsonwebtoken": "^9.0.2",
+    "passport": "^0.6.0",
+    "pg": "^8.11.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
