--- a/vercel.json
+++ b/vercel.json
@@ -24,6 +24,14 @@
   ],
   "routes": [
     {
+      "src": "/api/health",
+      "dest": "/api/health.js"
+    },
+    {
+      "src": "/auth/google",
+      "dest": "/api/auth/google.js"
+    },
+    {
       "src": "/api/(.*)",
       "dest": "/backend/server.js"
     },
