--- a/package.json
+++ b/package.json
@@ -22,15 +22,17 @@
   "license": "MIT",
   "dependencies": {
     "@supabase/supabase-js": "^2.89.0",
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.8.1",
+    "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^8.11.3",
     "uuid": "^9.0.0"
   },
