--- a/vercel.json
+++ b/vercel.json
@@ -24,6 +24,10 @@
   ],
   "routes": [
     {
+      "src": "/auth/google/callback",
+      "dest": "/api/auth/google/callback.js"
+    },
+    {
       "src": "/auth/google",
       "dest": "/api/auth/google.js"
     },
