--- a/vercel.json
+++ b/vercel.json
@@ -38,6 +38,14 @@
       "dest": "/api/auth/google.js"
     },
     {
+      "src": "/api/reports/monthly",
+      "dest": "/api/reports/monthly.js"
+    },
+    {
+      "src": "/api/user/settings",
+      "dest": "/api/user/settings.js"
+    },
+    {
       "src": "/api/transactions/([^/]+)",
       "dest": "/api/transactions/[id].js?id=$1"
     },
